objects/ssot__Prospect__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__AnnualRevenueAmount__c</fullName>
        <label>Annual Revenue Amount</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__CompanyName__c</fullName>
        <label>Company Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ContactPointAddressId__c</fullName>
        <label>Contact Point Address</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ContactPointEmailId__c</fullName>
        <label>Contact Point Email</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ContactPointPhoneId__c</fullName>
        <label>Contact Point Phone</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__EmployeeCount__c</fullName>
        <label>Employee Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Prospect Id</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__IndividualId__c</fullName>
        <label>Individual</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Industry__c</fullName>
        <label>Industry</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__LeadSource__c</fullName>
        <label>Lead Source</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ProspectStatus__c</fullName>
        <label>Prospect Status</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1722508390609_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Prospect_ContactPointEmailId_map_Con_rel</label>
        <referenceTo>ssot__ContactPointEmail__dlm</referenceTo>
        <relationshipLabel>Prospect_ContactPointEmailId_map_Con_rel</relationshipLabel>
        <relationshipName>rel_1722508390609_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1722508699097_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Prospect_IndividualId_map_Individual_rel</label>
        <referenceTo>ssot__Individual__dlm</referenceTo>
        <relationshipLabel>Prospect_IndividualId_map_Individual_rel</relationshipLabel>
        <relationshipName>rel_1722508699097_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1724381903718_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Prospect_ContactPointPhoneId_map_Con_rel</label>
        <referenceTo>ssot__ContactPointPhone__dlm</referenceTo>
        <relationshipLabel>Prospect_ContactPointPhoneId_map_Con_rel</relationshipLabel>
        <relationshipName>rel_1724381903718_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>